test/types/cptr/c-void-ptr-non-nilable-cast-2.good
c-void-ptr-non-nilable-cast-2.chpl:3: In function 'main':
c-void-ptr-non-nilable-cast-2.chpl:7: error: invalid cast from c_void_ptr to unmanaged MyClass - cast to unmanaged MyClass? instead
